# jian

./: .gitattributes  .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci-action-surface-isolation.yml  ci.yml  release.yml  startup-budget.yml
crates/jian-action-surface/: Cargo.toml  README.md
crates/jian-action-surface/src/: audit.rs  concurrency.rs  error.rs  execute.rs  lib.rs  list.rs  rate_limit.rs  runtime_dispatch.rs  swipe_throttle.rs  transport.rs
crates/jian-action-surface/src/mcp/: bridge.rs  mod.rs  server.rs  tools.rs
crates/jian-action-surface/tests/: mcp_smoke.rs
crates/jian-asp/: Cargo.toml
crates/jian-asp/src/: lib.rs  server.rs  session.rs
crates/jian-asp/src/protocol/: mod.rs  request.rs  result.rs  verbs.rs
crates/jian-asp/src/selector/: mod.rs  resolve.rs  types.rs
crates/jian-asp/src/transport/: mod.rs  stdio.rs
crates/jian-asp/src/verb_impls/: ax_verb.rs  expr_verb.rs  find_verb.rs  mod.rs  scroll_verb.rs  snapshot_verb.rs  state_verb.rs  swipe_verb.rs  tap_verb.rs  type_verb.rs
crates/jian-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/jian-cli/src/: diagnostic_render.rs  icon_loader.rs  main.rs
crates/jian-cli/src/commands/: check.rs  dev.rs  mod.rs  new.rs  pack.rs  perf.rs  player.rs  unpack.rs
crates/jian-cli/src/templates/: counter.op  form.op
crates/jian-cli/tests/: cli_subcommands.rs
crates/jian-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/jian-core/benches/: expr_eval.rs  signal_update.rs
crates/jian-core/src/: binding.rs  effect.rs  error.rs  geometry.rs  lib.rs  runtime.rs  spatial.rs  value.rs  viewport.rs
crates/jian-core/src/action/: action_trait.rs  cancel.rs  capability.rs  context.rs  error.rs  executor.rs  mod.rs  registry.rs  value.rs
crates/jian-core/src/action/actions/: control.rs  feedback.rs  logic.rs  mod.rs  navigation.rs  network.rs  platform.rs  state.rs  storage_ops.rs  websocket.rs
crates/jian-core/src/action/services/: clipboard.rs  feedback.rs  mod.rs  network.rs  null_impls.rs  router.rs  storage.rs
crates/jian-core/src/action_surface/: availability.rs  build_salt.rs  derive.rs  mod.rs  naming.rs  state_gate.rs  types.rs
crates/jian-core/src/capability/: audit.rs  broker.rs  gate.rs  map.rs  mod.rs
crates/jian-core/src/document/: loader.rs  mod.rs  tree.rs
crates/jian-core/src/expression/: ast.rs  bytecode.rs  cache.rs  compiler.rs  diag.rs  lexer.rs  mod.rs  parser.rs  scope.rs  token.rs  vm.rs
crates/jian-core/src/expression/builtins/: array.rs  date.rs  math.rs  mod.rs  object.rs  string.rs  typeops.rs
crates/jian-core/src/gesture/: arena.rs  dispatcher.rs  focus.rs  hit.rs  mod.rs  pointer.rs  priority.rs  raw.rs  recognizer.rs  router.rs  semantic.rs
crates/jian-core/src/gesture/recognizers/: hover.rs  long_press.rs  mod.rs  pan.rs  rotate.rs  scale.rs  tap.rs
crates/jian-core/src/layout/: measure.rs  mod.rs  resolve.rs
crates/jian-core/src/logic/: mod.rs
crates/jian-core/src/render/: commands.rs  mod.rs  paint.rs
crates/jian-core/src/scene/: dirty.rs  mod.rs  properties.rs
crates/jian-core/src/signal/: mod.rs  scheduler.rs  tracker.rs
crates/jian-core/src/startup/: bootstrap.rs  driver.rs  mod.rs  phase.rs  report.rs  spawn.rs
crates/jian-core/src/state/: mod.rs  path.rs  scope.rs
crates/jian-core/tests/: action_control.rs  action_fetch.rs  action_io.rs  action_navigation.rs  action_state.rs  binding_counter.rs  capability_enforcement.rs  counter.op  end_to_end.rs  expr_proptest.rs  expr_subscription.rs  gesture_tap_counter.rs  layout_basic.rs  spatial_basic.rs
crates/jian-host-desktop/: CHANGELOG.md  Cargo.toml  README.md
crates/jian-host-desktop/src/: app_icon.rs  deeplink.rs  host.rs  keyboard.rs  lib.rs  menus.rs  pointer.rs  run.rs  scene.rs  startup_visual.rs  updater.rs
crates/jian-host-desktop/src/services/: clipboard.rs  feedback.rs  mod.rs  network.rs  router.rs  storage.rs
crates/jian-host-desktop/src/startup/: mod.rs  splash.rs
crates/jian-host-desktop/tests/: binding_walker.rs  pointer_fuzz.rs  startup_budget.rs  winit_click_demo.rs
crates/jian-ops-schema/: CHANGELOG.md  Cargo.toml  README.md
crates/jian-ops-schema/bindings/: ops.schema.json  ops.ts
crates/jian-ops-schema/src/: app.rs  compat.rs  document.rs  error.rs  events.rs  expression.rs  font_plan.rs  gestures.rs  lib.rs  lifecycle.rs  logic_module.rs  navigation.rs  page.rs  routes.rs  semantics.rs  sizing.rs  state.rs  style.rs  variable.rs  version.rs
crates/jian-ops-schema/src/node/: base.rs  container.rs  ellipse.rs  frame.rs  icon_font.rs  image.rs  line.rs  mod.rs  path.rs  polygon.rs  ref_node.rs  text.rs  text_input.rs
crates/jian-ops-schema/src/pack/: manifest.rs  mod.rs
crates/jian-ops-schema/tests/: backward_compat.rs  forward_compat.rs  roundtrip.rs  schema_drift.rs
crates/jian-ops-schema/tests/corpus/: full-jian-extensions.op  minimal.op  nested-frame.op  pages.op  rectangle.op  with-variables.op
crates/jian-ops-schema/tests/forward-compat/: pencil-demo.op
crates/jian-skia/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/jian-skia/src/: backend.rs  color.rs  convert.rs  icons.rs  image.rs  lib.rs  measure.rs  path.rs  surface.rs
crates/jian-skia/src/startup/: eager_gpu_init.rs  mod.rs
crates/jian-skia/src/surface/: d3d.rs  gl.rs  metal.rs  mod.rs
crates/jian-skia/tests/: e2e_counter.rs  golden_corpus.rs  measure_drift.rs
packaging/: README.md  install.sh
packaging/linux/: build-appimage.sh  jian.desktop  jian.mime.xml
packaging/winget/manifests/: jian.yaml
scripts/: build-textlayout.sh
