[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
repository = "https://github.com/zseven-w/jian"
authors = ["Jian contributors"]

[workspace.dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = { version = "1.0", features = ["preserve_order"] }
schemars     = { version = "0.8", features = ["preserve_order"] }
ts-rs        = { version = "10.0", features = ["serde-json-impl"] }
thiserror    = "1.0"
insta        = { version = "1.40", features = ["json", "yaml"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
