[package]
name         = "jian-action-surface"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "AI Action Surface — production end-user AI access (list_available_actions / execute_action) over a Jian Runtime"

[features]
# Plan: production `jian-host-*` links the in-process Rust API
# (`ActionSurface::list/execute`) by default — `agent-surface` is the
# stable feature flag for the production AI path. `--no-default-features`
# strips the surface entirely (headless / library consumers, CI fast
# path). MCP transport is a separate opt-in.
default = ["agent-surface"]
# Production AI access. Currently a no-op gate (the surface is the
# whole crate); kept as a feature so future MCP/tokio work doesn't
# silently bloat the binary for consumers that only want the API.
agent-surface = []
# Future MCP server (rmcp + tokio). Not implemented yet.
mcp = []

[dependencies]
jian-core       = { path = "../jian-core" }
jian-ops-schema = { path = "../jian-ops-schema" }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
async-trait     = "0.1"
futures         = "0.3"
blake3          = "1.5"

[dev-dependencies]
serde_json      = { workspace = true }
