[package]
name         = "jian-action-surface"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "AI Action Surface — production end-user AI access (list_available_actions / execute_action) over a Jian Runtime"

[features]
# Plan: production `jian-host-*` links the in-process Rust API
# (`ActionSurface::list/execute`) by default — `agent-surface` is the
# stable feature flag for the production AI path. `--no-default-features`
# strips the surface entirely (headless / library consumers, CI fast
# path). MCP transport is a separate opt-in.
default = ["agent-surface"]
# Production AI access. Currently a no-op gate (the surface is the
# whole crate); kept as a feature so future MCP/tokio work doesn't
# silently bloat the binary for consumers that only want the API.
agent-surface = []
# MCP server transport (rmcp + tokio). Adds a stdio listener that
# forwards `tools/list` and `tools/call` into the in-process
# `ActionSurface` via a typed mpsc bridge. No-op when off — the
# in-process API stays the same. See plan
# `2026-04-25-jian-action-surface-mcp.md`.
mcp = ["dep:rmcp", "dep:tokio", "dep:tokio-util", "dep:schemars"]

[dependencies]
jian-core       = { path = "../jian-core" }
jian-ops-schema = { path = "../jian-ops-schema" }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
async-trait     = "0.1"
futures         = "0.3"
blake3          = "1.5"

# rmcp transports + tokio runtime are gated behind `mcp`; default
# builds drop them.
rmcp            = { version = "0.8", optional = true, features = ["server", "client", "transport-io", "macros"] }
# rmcp-macros generate `schemars::...` paths; we re-import via rmcp at
# runtime but the proc-macro needs `schemars` as a direct dep to match
# rmcp 0.8's bundled v1.x version (workspace `schemars` is 0.8 — the
# different API the schemars-1 macros expect would mismatch).
schemars        = { version = "1.2", optional = true }
tokio           = { version = "1", optional = true, features = ["rt", "macros", "io-std", "io-util", "sync", "net"] }
tokio-util      = { version = "0.7", optional = true, features = ["rt"] }

[dev-dependencies]
serde_json      = { workspace = true }
