[package]
name         = "jian"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Command-line toolchain for the Jian runtime (.op files)"

[features]
# Default enables the `player` + `dev` subcommands, which pull in the
# winit event loop + softbuffer via jian-host-desktop's `run` feature.
# `dev` additionally pulls in `notify` for filesystem watching.
# Disable for a headless-only build (`cargo build --no-default-features`).
default = ["player"]
player  = ["dep:jian-host-desktop", "dep:notify"]
# `jian dev --mcp` flag. Pulls the MCP server from
# `jian-action-surface` + the host's mcp drain integration. Off by
# default so the headless / no-rmcp build path stays tight.
mcp     = ["player", "jian-host-desktop/mcp", "dep:jian-action-surface"]

[dependencies]
jian-core        = { path = "../jian-core" }
jian-ops-schema  = { path = "../jian-ops-schema" }
jian-host-desktop = { path = "../jian-host-desktop", optional = true, features = ["run"] }
jian-action-surface = { path = "../jian-action-surface", optional = true, features = ["mcp"] }
clap             = { version = "4", features = ["derive"] }
anyhow           = "1"
serde            = { workspace = true }
serde_json       = { workspace = true }
zip              = { version = "2.2", default-features = false, features = ["deflate"] }
notify           = { version = "6", optional = true }

[dev-dependencies]
assert_cmd      = "2"
predicates      = "3"
tempfile        = "3"

[[bin]]
name = "jian"
path = "src/main.rs"
