[package]
name         = "jian"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "Command-line toolchain for the Jian runtime (.op files)"

[features]
# Default enables the `player` + `dev` subcommands, which pull in the
# winit event loop + softbuffer via jian-host-desktop's `run` feature.
# `dev` additionally pulls in `notify` for filesystem watching.
# Disable for a headless-only build (`cargo build --no-default-features`).
default = ["player"]
player  = ["dep:jian-host-desktop", "dep:notify"]
# `jian dev --mcp` flag. Pulls the MCP server from
# `jian-action-surface` + the host's mcp drain integration. Off by
# default so the headless / no-rmcp build path stays tight.
mcp     = ["player", "jian-host-desktop/mcp", "dep:jian-action-surface"]

[dependencies]
jian-core        = { path = "../jian-core" }
jian-ops-schema  = { path = "../jian-ops-schema" }
jian-host-desktop = { path = "../jian-host-desktop", optional = true, features = ["run"] }
jian-action-surface = { path = "../jian-action-surface", optional = true, features = ["mcp"] }
clap             = { version = "4", features = ["derive"] }
anyhow           = "1"
serde            = { workspace = true }
serde_json       = { workspace = true }
zip              = { version = "2.2", default-features = false, features = ["deflate"] }
blake3           = "1.5"
notify           = { version = "6", optional = true }
# `jian perf startup` drives the StartupDriver via futures::executor::block_on.
futures          = "0.3"
# PNG decoder for the CLI's default app-icon loader (player + dev paths).
# Lighter than the `image` crate and PNG covers the common case for
# `app.icon` and `--icon` flags; hosts that need ICO / JPEG decode it
# themselves before constructing `HostConfig`.
png              = "0.17"

[dev-dependencies]
assert_cmd      = "2"
predicates      = "3"
tempfile        = "3"

[[bin]]
name = "jian"
path = "src/main.rs"

# `cargo bundle` config (Plan 8 Task 10). Run `cargo bundle --release`
# from this crate's directory on macOS to build `target/release/bundle/
# osx/Jian.app`. The Linux / Windows variants of `cargo bundle`
# produce `.deb` / `.msi` from the same metadata.
#
# `identifier` follows the reverse-DNS bundle id convention; the
# concrete release pipeline can override via `--manifest-path`. Icon
# comes from `packaging/icon/AppIcon.icns` once the icon-set is generated
# (a follow-up commit ships the .icns; the placeholder path is
# checked in `packaging/README.md`).
[package.metadata.bundle]
name = "Jian"
identifier = "dev.jian.cli"
icon = ["../../packaging/icon/AppIcon.icns"]
short_description = "Jian runtime CLI — check, pack, and run .op files"
long_description = """
Jian is the runtime that backs OpenPencil — a vector design tool that
exports .op files. The `jian` CLI validates, packs, and previews those
files standalone.
"""
copyright = "Copyright (c) 2026 ZSeven-W"
category = "Developer Tool"
osx_minimum_system_version = "10.15"
osx_url_schemes = ["jian"]

# `cargo wix` config (Plan 8 Task 10, Windows MSI). Run
# `cargo wix --no-build --nocapture` from this crate's directory on
# Windows once the toolchain is installed (`cargo install cargo-wix`)
# and a `wix/main.wxs` lives under this crate. The wxs template
# itself ships in `packaging/winget/wix/main.wxs.tmpl` so the same release
# script that fills in `packaging/homebrew/jian.rb` can render it.
[package.metadata.wix]
upgrade-guid = "00000000-0000-0000-0000-000000000000"
path-guid = "00000000-0000-0000-0000-000000000001"
