[package]
name         = "jian-host-desktop"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
description  = "winit-based desktop host for the Jian runtime"

[features]
# Default = pure-function translators + in-memory services. No winit
# event loop is started unless a `run` helper is called, and no
# platform-specific surface feature is picked up automatically so CI
# stays windowless.
default = []

# Opt-in to the real event-loop run helper. Pulls in `softbuffer` for
# CPU-side pixel presentation (no per-platform GPU context needed).
run = ["dep:softbuffer"]

# Native OS feature flags for the optional integrations (added when
# the implementations land):
clipboard = ["dep:arboard"]
# Native menus via `muda` — cross-platform (macOS / Windows / Linux).
# Phase 1 ships a pure menu *spec* (`MenuSpec`) so authors can
# declare File / Edit / View entries; the actual `muda::Menu`
# wiring activates when the host opens its window. Pulled in
# under a feature flag because the shared library footprint isn't
# needed for headless / CI builds.
menus = ["dep:muda"]

# AI Action Surface integration. Wires `jian-action-surface`'s
# `Bridge::Drain` into the run-loop's per-frame `about_to_wait` tick:
# each pending MCP request is serviced against an `ActionSurface`
# refreshed on every hot-reload. Off by default — only `jian dev
# --mcp` (or a host author who explicitly opts in) pulls in the
# rmcp/tokio shared libs.
mcp = ["dep:jian-action-surface"]

[dependencies]
jian-core       = { path = "../jian-core" }
jian-ops-schema = { path = "../jian-ops-schema" }
jian-skia       = { path = "../jian-skia" }
jian-action-surface = { path = "../jian-action-surface", optional = true, features = ["mcp"] }
winit           = "0.30"
async-trait     = "0.1"
serde           = { workspace = true }
serde_json      = { workspace = true }
arboard         = { version = "3", optional = true }
softbuffer      = { version = "0.4", optional = true }
muda            = { version = "0.13", optional = true }

# macOS-only: drive `NSApp.setApplicationIconImage:` so the runtime can
# update the Dock icon for unbundled binaries (winit's `set_window_icon`
# is a no-op on macOS — the Dock icon comes from the .app bundle's
# .icns by default; we override it from the schema's `app.icon` PNG).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.2", features = ["NSData", "NSString"] }

[dev-dependencies.futures]
version = "0.3"

[[bin]]
name = "jian-player"
path = "src/bin/jian-player.rs"
